--- a/index.html
+++ b/index.html
@@ -7,9 +7,30 @@
 <style>
   body { font-family: system-ui,sans-serif; margin:0; display:grid; grid-template-rows:auto 1fr auto; height:100vh;}
   header { padding:12px 16px; background:#f5f5f5; display:flex; justify-content:space-between; align-items:center;}
-  main { display:flex; overflow:hidden;}
-  #chat-section,#image-section { flex:1; padding:16px; overflow-y:auto; border-right:1px solid #ddd;}
-  #image-section { border-right:none;}
+  main {
+  display: flex;
+  height: calc(100vh - 60px); /* Header + Footer berücksichtigen */
+  overflow: hidden; /* verhindert, dass Scrollbars doppelt erscheinen */
+}
+
+#chat-section, #image-section {
+  flex: 1;
+  min-width: 0; /* sehr wichtig für flexbox, sonst Inhalt kann nicht schrumpfen */
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+#log {
+  flex: 1;            /* Chatbereich füllt den verfügbaren Platz */
+  overflow-y: auto;   /* scrollen wenn nötig */
+  padding: 16px;
+}
+
+#composer {
+  flex-shrink: 0;     /* Inputfeld immer sichtbar */
+}
+
   .msg { margin-bottom:12px; }
   .user { font-weight:bold; color:#0066cc; }
   .assistant { font-weight:bold; color:#009933; }
