--- a/index.html
+++ b/index.html
@@ -3,42 +3,26 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Freier Text+Bild Chatbot</title>
+<title>Unhinged Chat + Bildgenerator</title>
 <style>
-  body { font-family: system-ui,sans-serif; margin:0; display:grid; grid-template-rows:auto 1fr auto; height:100vh;}
-  header { padding:12px 16px; background:#f5f5f5; display:flex; justify-content:space-between; align-items:center;}
-  main {
-  display: flex;
-  height: calc(100vh - 60px); /* Header + Footer berücksichtigen */
-  overflow: hidden; /* verhindert, dass Scrollbars doppelt erscheinen */
-}
-
-#chat-section, #image-section {
-  flex: 1;
-  min-width: 0; /* sehr wichtig für flexbox, sonst Inhalt kann nicht schrumpfen */
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-}
-
-#log {
-  flex: 1;            /* Chatbereich füllt den verfügbaren Platz */
-  overflow-y: auto;   /* scrollen wenn nötig */
-  padding: 16px;
-}
-
-#composer {
-  flex-shrink: 0;     /* Inputfeld immer sichtbar */
-}
-
-  .msg { margin-bottom:12px; }
-  .user { font-weight:bold; color:#0066cc; }
-  .assistant { font-weight:bold; color:#009933; }
-  form { display:grid; grid-template-columns:1fr auto; gap:8px; padding:12px 16px; border-top:1px solid #ddd;}
-  textarea { resize: vertical; min-height:60px; padding:10px; }
-  button { padding:10px 16px; border-radius:8px; border:none; background:#0066cc; color:white; font-weight:bold; cursor:pointer;}
-  button:disabled { opacity:0.6; cursor:wait;}
-  #image-output img { max-width:100%; margin-bottom:12px; border-radius:8px; border:1px solid #ccc;}
+  body { margin:0; font-family: 'Segoe UI', sans-serif; height:100vh; display:grid; grid-template-rows:auto 1fr; background:#1e1e1e; color:#eee;}
+  header { display:flex; justify-content:space-between; align-items:center; padding:12px 24px; background:#2c2c2c; box-shadow:0 2px 5px rgba(0,0,0,0.5);}
+  header select { padding:6px 12px; border-radius:6px; border:none; background:#444; color:#eee;}
+  main { display:flex; overflow:hidden; }
+  #chat-section, #image-section { flex:1; display:flex; flex-direction:column; min-width:0; border-right:1px solid #333; }
+  #image-section { border-right:none; }
+  #log { flex:1; padding:16px; overflow-y:auto; background:#1b1b1b; }
+  .msg { margin-bottom:12px; line-height:1.4; }
+  .user { color:#00aaff; font-weight:bold; }
+  .assistant { color:#00ff88; font-weight:bold; }
+  form { display:flex; gap:8px; padding:12px; background:#2c2c2c; border-top:1px solid #333; }
+  textarea { flex:1; resize: vertical; min-height:60px; padding:10px; border-radius:6px; border:none; background:#333; color:#eee; }
+  button { padding:10px 16px; border-radius:6px; border:none; background:#00aaff; color:#fff; font-weight:bold; cursor:pointer; }
+  button:disabled { opacity:0.6; cursor:wait; }
+  #image-output { flex:1; overflow-y:auto; padding:16px; display:flex; flex-wrap:wrap; gap:12px; background:#1b1b1b; justify-content:flex-start; }
+  #image-output img { max-width:100%; border-radius:8px; border:1px solid #444; }
+  #image-controls { display:flex; gap:8px; padding:12px; background:#2c2c2c; border-top:1px solid #333; }
+  #image-prompt { flex:1; resize: vertical; min-height:40px; padding:10px; border-radius:6px; border:none; background:#333; color:#eee; }
 </style>
 <script type="importmap">
 {
@@ -52,8 +36,9 @@
 <body>
 
 <header>
-  <strong>Freier Text+Bild Chatbot</strong>
+  <strong>Unhinged Chat & Bildgenerator</strong>
   <div>
+    Chat-Modell:
     <select id="model">
       <option value="Llama-3-7B-Base-MLC">Llama 3 7B Base</option>
       <option value="Phi-3-mini-Base-4k-MLC">Phi-3 Mini Base</option>
@@ -62,15 +47,22 @@
 </header>
 
 <main>
+  <!-- Chat -->
   <div id="chat-section">
     <div id="log"></div>
     <form id="composer">
-      <textarea id="prompt" placeholder="Frag mich oder tippe /image …" required></textarea>
+      <textarea id="prompt" placeholder="Frag mich oder tippe /image ..."></textarea>
       <button id="send">Senden</button>
     </form>
   </div>
+
+  <!-- Bilder -->
   <div id="image-section">
     <div id="image-output"></div>
+    <div id="image-controls">
+      <textarea id="image-prompt" placeholder="Bildbeschreibung…"></textarea>
+      <button id="gen-image">Bild generieren</button>
+    </div>
   </div>
 </main>
 
@@ -78,12 +70,12 @@
 import * as webllm from "webllm";
 import * as websd from "websd";
 
-const log=document.getElementById("log");
-const form=document.getElementById("composer");
-const promptEl=document.getElementById("prompt");
-const modelSel=document.getElementById("model");
-const sendBtn=document.getElementById("send");
-const imgOutput=document.getElementById("image-output");
+// Chat Setup
+const log = document.getElementById("log");
+const form = document.getElementById("composer");
+const promptEl = document.getElementById("prompt");
+const modelSel = document.getElementById("model");
+const sendBtn = document.getElementById("send");
 
 let engine;
 let chatHistory=[];
@@ -98,8 +90,8 @@ function addMsg(role,text){
 
 async function initModel(){
   const modelId=modelSel.value;
-  addMsg("assistant",`⏳ Lade Modell: ${modelId} ...`);
-  engine=await webllm.CreateMLCEngine(modelId,{initProgressCallback:info=>console.log(info)});
+  addMsg("assistant",`⏳ Lade Base-Modell: ${modelId} ...`);
+  engine=await webllm.CreateMLCEngine(modelId,{initProgressCallback:info=>console.log("Init:",info)});
   chatHistory=[];
   addMsg("assistant",`✅ Modell "${modelId}" bereit!`);
 }
@@ -107,15 +99,8 @@ async function initModel(){
 modelSel.addEventListener("change",()=>initModel());
 initModel();
 
-// Init SD Engine
-let sdEngine;
-async function initSD(){
-  sdEngine=await websd.CreateEngine("stable-diffusion-1.5-base",{progressCallback:info=>console.log("SD:",info)});
-}
-initSD();
-
-// Chat + Bild-Command Handler
-form.addEventListener("submit",async e=>{
+// Chat Input
+form.addEventListener("submit", async e=>{
   e.preventDefault();
   const text=promptEl.value.trim();
   if(!text||!engine)return;
@@ -123,17 +108,11 @@ form.addEventListener("submit",async e=>{
   addMsg("user",text);
   sendBtn.disabled=true;
 
-  // Prüfe auf /image Command
+  // /image command
   if(text.startsWith("/image")){
     const imgPrompt=text.replace("/image","").trim();
-    addMsg("assistant",`⏳ Generiere Bild: "${imgPrompt}" ...`);
-    if(sdEngine){
-      const imgData=await sdEngine.generate({prompt:imgPrompt,width:512,height:512,steps:20});
-      const imgEl=document.createElement("img");
-      imgEl.src=imgData;
-      imgOutput.prepend(imgEl);
-      addMsg("assistant","✅ Bild generiert!");
-    } else addMsg("assistant","❌ SD Engine nicht bereit.");
+    generateImage(imgPrompt);
+    addMsg("assistant",`⏳ Bild wird generiert: "${imgPrompt}"`);
     sendBtn.disabled=false;
     return;
   }
@@ -162,6 +141,31 @@ function addOrUpdateAssistant(text){
   let last=log.lastElementChild;
   if(!last||!last.querySelector(".assistant")) addMsg("assistant",text);
   else last.innerHTML=`<span class="assistant">Bot:</span> ${text}`;
+}
+
+// ---------------- Bildgenerator ----------------
+const genBtn=document.getElementById("gen-image");
+const imgPrompt=document.getElementById("image-prompt");
+const imgOutput=document.getElementById("image-output");
+
+let sdEngine;
+async function initSD(){
+  sdEngine=await websd.CreateEngine("stable-diffusion-1.5-base",{progressCallback:info=>console.log("SD Init:",info)});
+}
+initSD();
+
+genBtn.addEventListener("click",()=>{
+  const prompt=imgPrompt.value.trim();
+  if(!prompt) return;
+  generateImage(prompt);
+});
+
+async function generateImage(prompt){
+  if(!sdEngine) return addMsg("assistant","❌ SD Engine nicht bereit");
+  const imgData = await sdEngine.generate({prompt,width:512,height:512,steps:20});
+  const imgEl = document.createElement("img");
+  imgEl.src = imgData;
+  imgOutput.prepend(imgEl);
 }
 </script>
 
