--- a/index.html
+++ b/index.html
@@ -3,194 +3,172 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Unhinged Chat + Bildgenerator</title>
+<title>Frei Chat + Bildgenerator</title>
 <style>
-  body { margin:0; font-family: 'Segoe UI', sans-serif; height:100vh; display:grid; grid-template-rows:auto 1fr; background:#1e1e1e; color:#eee;}
-  header { display:flex; justify-content:space-between; align-items:center; padding:12px 24px; background:#2c2c2c; box-shadow:0 2px 5px rgba(0,0,0,0.5);}
-  header select { padding:6px 12px; border-radius:6px; border:none; background:#444; color:#eee;}
-  main { display:flex; overflow:hidden; }
-  #chat-section, #image-section { flex:1; display:flex; flex-direction:column; min-width:0; border-right:1px solid #333; }
-  #image-section { border-right:none; }
-  #log { flex:1; padding:16px; overflow-y:auto; background:#1b1b1b; }
-  .msg { margin-bottom:12px; line-height:1.4; }
-  .user { color:#00aaff; font-weight:bold; }
-  .assistant { color:#00ff88; font-weight:bold; }
-  form { display:flex; gap:8px; padding:12px; background:#2c2c2c; border-top:1px solid #333; }
-  textarea { flex:1; resize: vertical; min-height:60px; padding:10px; border-radius:6px; border:none; background:#333; color:#eee; }
-  button { padding:10px 16px; border-radius:6px; border:none; background:#00aaff; color:#fff; font-weight:bold; cursor:pointer;}
-  button:disabled { opacity:0.6; cursor:wait; }
-  #image-output { flex:1; overflow-y:auto; padding:16px; display:flex; flex-wrap:wrap; gap:12px; background:#1b1b1b; justify-content:flex-start; }
+  body { font-family: system-ui, sans-serif; margin: 0; display: grid; grid-template-rows: auto 1fr auto; height: 100vh; background:#1e1e1e; color:#eee; }
+  header { padding: 12px 16px; box-shadow: 0 1px 0 rgba(0,0,0,.2); background: #2c2c2c; display:flex; justify-content:space-between; align-items:center;}
+  #log { padding: 16px; overflow-y: auto; background:#1b1b1b; flex:1;}
+  .msg { margin-bottom: 12px; }
+  .user { font-weight: bold; color: #00aaff; }
+  .assistant { font-weight: bold; color: #00ff88; }
+  form, #image-controls { display: grid; grid-template-columns: 1fr auto; gap: 8px; padding: 12px 16px; border-top: 1px solid #333; background:#2c2c2c; }
+  textarea { resize: vertical; min-height: 60px; padding: 10px; border-radius: 6px; border:none; background:#333; color:#eee; }
+  button { padding: 10px 16px; border-radius: 8px; border: none; background: #00aaff; color: white; font-weight: bold; cursor: pointer; }
+  button:disabled { opacity: 0.6; cursor: wait; }
+  #image-output { padding: 16px; overflow-y:auto; display:flex; flex-wrap:wrap; gap:12px; background:#1b1b1b; }
   #image-output img { max-width:100%; border-radius:8px; border:1px solid #444; }
-  #image-controls { display:flex; gap:8px; padding:12px; background:#2c2c2c; border-top:1px solid #333; }
-  #image-prompt { flex:1; resize: vertical; min-height:40px; padding:10px; border-radius:6px; border:none; background:#333; color:#eee; }
 </style>
 <script type="importmap">
 {
   "imports": {
-    "webllm":"https://esm.run/@mlc-ai/web-llm",
-    "websd":"https://esm.run/@mlc-ai/web-sd"
+    "webllm": "https://esm.run/@mlc-ai/web-llm",
+    "websd": "https://esm.run/@mlc-ai/web-sd"
   }
 }
 </script>
 </head>
 <body>
-
 <header>
-  <strong>Unhinged Chat & Bildgenerator</strong>
-  <div>
-    Chat-Modell:
-    <select id="model">
-      <option value="Phi-3-mini-Base-4k-MLC" selected>Phi-3 Mini Base</option>
-      <option value="Llama-3-7B-Base-MLC">Llama 3 7B Base</option>
-    </select>
-  </div>
+  <strong>Frei Chat + Bildgenerator</strong>
+  <select id="model">
+    <option value="Phi-3-mini-4k-instruct-q4f16_1-MLC" selected>Phi-3 Mini (lokal, klein)</option>
+    <option value="Llama-3-8B-Instruct-q4f16_1-MLC">Llama 3 8B (lokal, größer)</option>
+  </select>
 </header>
 
-<main>
-  <!-- Chat -->
-  <div id="chat-section">
-    <div id="log"></div>
-    <form id="composer">
-      <textarea id="prompt" placeholder="Frag mich oder tippe /image ..."></textarea>
-      <button type="submit">Senden</button>
-    </form>
-  </div>
+<main id="log"></main>
 
-  <!-- Bilder -->
-  <div id="image-section">
-    <div id="image-output"></div>
-    <div id="image-controls">
-      <textarea id="image-prompt" placeholder="Bildbeschreibung…"></textarea>
-      <button id="gen-image">Bild generieren</button>
-    </div>
-  </div>
-</main>
+<!-- Chat Eingabe -->
+<form id="composer">
+  <textarea id="prompt" placeholder="Frag mich etwas…" required></textarea>
+  <button id="send">Senden</button>
+</form>
+
+<!-- Bildgenerator -->
+<div id="image-controls">
+  <textarea id="image-prompt" placeholder="Bildbeschreibung…"></textarea>
+  <button id="gen-image">Bild generieren</button>
+</div>
+<div id="image-output"></div>
 
 <script type="module">
 import * as webllm from "webllm";
 import * as websd from "websd";
 
-document.addEventListener("DOMContentLoaded", async () => {
+const log = document.getElementById("log");
+const form = document.getElementById("composer");
+const promptEl = document.getElementById("prompt");
+const modelSel = document.getElementById("model");
+const sendBtn = document.getElementById("send");
 
-  // ---------------- Chat Setup ----------------
-  const log = document.getElementById("log");
-  const form = document.getElementById("composer");
-  const promptEl = document.getElementById("prompt");
-  const modelSel = document.getElementById("model");
-  const sendBtn = form.querySelector("button[type='submit']");
+const imgPromptEl = document.getElementById("image-prompt");
+const genBtn = document.getElementById("gen-image");
+const imgOutput = document.getElementById("image-output");
 
-  let engine;
-  let chatHistory=[];
+let engine;
+let chatHistory = [];
+let sdEngine;
 
-  function addMsg(role,text){
-    const div=document.createElement("div");
-    div.className="msg";
-    div.innerHTML=`<span class="${role}">${role==="user"?"Du":"Bot"}:</span> ${text}`;
-    log.appendChild(div);
-    log.scrollTop=log.scrollHeight;
+// ---------------- LLM ----------------
+function addMsg(role, text) {
+  const div = document.createElement("div");
+  div.className = "msg";
+  div.innerHTML = `<span class="${role}">${role==="user"?"Du":"Bot"}:</span> ${text}`;
+  log.appendChild(div);
+  log.scrollTop = log.scrollHeight;
+}
+
+function addOrUpdateAssistant(text){
+  let last = log.lastElementChild;
+  if(!last || !last.querySelector(".assistant")){
+    addMsg("assistant", text);
+  } else {
+    last.innerHTML = `<span class="assistant">Bot:</span> ${text}`;
   }
+  log.scrollTop = log.scrollHeight;
+}
 
-  async function initModel(){
-    const modelId=modelSel.value;
-    addMsg("assistant",`⏳ Lade Base-Modell: ${modelId} ...`);
-    try {
-      engine=await webllm.CreateMLCEngine(modelId,{initProgressCallback:info=>console.log("Init:",info)});
-      chatHistory=[];
-      addMsg("assistant",`✅ Modell "${modelId}" bereit!`);
-    } catch(e){
-      addMsg("assistant",`❌ Fehler beim Laden: ${e.message}`);
-    }
+async function initModel() {
+  const modelId = modelSel.value;
+  addMsg("assistant", `⏳ Lade Modell: ${modelId} …`);
+  try {
+    engine = await webllm.CreateMLCEngine(modelId, { initProgressCallback: info => console.log("Init:",info) });
+    chatHistory = [];
+    addMsg("assistant", `✅ Modell "${modelId}" bereit!`);
+  } catch(e){
+    addMsg("assistant", "❌ Fehler beim Laden: " + e.message);
   }
+}
+modelSel.addEventListener("change", ()=>initModel());
+initModel();
 
-  modelSel.addEventListener("change",()=>initModel());
-  await initModel();
-
-  async function sendChatMessage(text){
-    addMsg("user", text);
-    sendBtn.disabled = true;
-
-    try {
-      const replyChunks = [];
-      const stream = await engine.chat.completions.create({
-        messages: [...chatHistory, {role:"user", content:text}],
-        stream: true
-      });
-
-      for await (const part of stream){
-        const delta = part.choices[0]?.delta?.content;
-        if(delta){
-          replyChunks.push(delta);
-          addOrUpdateAssistant(replyChunks.join(""));
-        }
+async function sendChatMessage(text){
+  addMsg("user", text);
+  sendBtn.disabled = true;
+  try{
+    const replyChunks = [];
+    const stream = await engine.chat.completions.create({
+      messages: [...chatHistory, { role:"user", content:text }],
+      stream: true
+    });
+    for await(const part of stream){
+      const delta = part.choices[0]?.delta?.content;
+      if(delta){
+        replyChunks.push(delta);
+        addOrUpdateAssistant(replyChunks.join(""));
       }
-
-      const fullReply = replyChunks.join("");
-      chatHistory.push({role:"user", content:text});
-      chatHistory.push({role:"assistant", content:fullReply});
-    } catch(e){
-      addMsg("assistant","❌ Fehler beim Modell: " + e.message);
-    } finally {
-      sendBtn.disabled = false;
     }
+    const fullReply = replyChunks.join("");
+    chatHistory.push({ role:"user", content:text });
+    chatHistory.push({ role:"assistant", content:fullReply });
+  }catch(e){
+    addMsg("assistant", "❌ Fehler: " + e.message);
+  }finally{
+    sendBtn.disabled = false;
   }
+}
 
-  function addOrUpdateAssistant(text){
-    let last=log.lastElementChild;
-    if(!last||!last.querySelector(".assistant")) addMsg("assistant",text);
-    else last.innerHTML=`<span class="assistant">Bot:</span> ${text}`;
+// ---------------- Events Chat ----------------
+form.addEventListener("submit", async e=>{
+  e.preventDefault();
+  const text = promptEl.value.trim();
+  if(!text || !engine) return;
+  promptEl.value="";
+  if(text.startsWith("/image")){
+    generateImage(text.replace("/image","").trim());
+    addMsg("assistant","⏳ Bild wird generiert …");
+    return;
   }
-
-  // ---------------- Event Listener Chat ----------------
-  form.addEventListener("submit", async e=>{
-    e.preventDefault(); // verhindert Page-Reload
-    const text = promptEl.value.trim();
-    if(!text || !engine) return;
-    promptEl.value="";
-
-    if(text.startsWith("/image")){
-      generateImage(text.replace("/image","").trim());
-      addMsg("assistant",`⏳ Bild wird generiert`);
-      return;
-    }
-
-    await sendChatMessage(text);
-  });
-
-  // ---------------- Bildgenerator ----------------
-  const genBtn=document.getElementById("gen-image");
-  const imgPrompt=document.getElementById("image-prompt");
-  const imgOutput=document.getElementById("image-output");
-
-  let sdEngine;
-  async function initSD(){
-    try {
-      sdEngine=await websd.CreateEngine("stable-diffusion-1.5-base",{progressCallback:info=>console.log("SD Init:",info)});
-    } catch(e){
-      addMsg("assistant","❌ Fehler beim Laden von SD: "+e.message);
-    }
-  }
-  await initSD();
-
-  genBtn.addEventListener("click",()=>{
-    const prompt=imgPrompt.value.trim();
-    if(!prompt) return;
-    generateImage(prompt);
-  });
-
-  async function generateImage(prompt){
-    if(!sdEngine) return addMsg("assistant","❌ SD Engine nicht bereit");
-    try{
-      const imgData = await sdEngine.generate({prompt,width:512,height:512,steps:20});
-      const imgEl = document.createElement("img");
-      imgEl.src = imgData;
-      imgOutput.prepend(imgEl);
-    } catch(e){
-      addMsg("assistant","❌ Fehler beim Generieren des Bildes: "+e.message);
-    }
-  }
-
+  await sendChatMessage(text);
 });
-</script>
 
+// ---------------- SD Engine ----------------
+async function initSD(){
+  try{
+    sdEngine = await websd.CreateEngine("stable-diffusion-1.5-base", { progressCallback: info => console.log("SD Init:",info) });
+  }catch(e){
+    addMsg("assistant", "❌ Fehler beim Laden von SD: " + e.message);
+  }
+}
+initSD();
+
+genBtn.addEventListener("click", ()=>{
+  const prompt = imgPromptEl.value.trim();
+  if(!prompt) return;
+  generateImage(prompt);
+});
+
+async function generateImage(prompt){
+  if(!sdEngine) return addMsg("assistant","❌ SD Engine nicht bereit");
+  try{
+    const imgData = await sdEngine.generate({ prompt, width:512, height:512, steps:20 });
+    const imgEl = document.createElement("img");
+    imgEl.src = imgData;
+    imgOutput.prepend(imgEl);
+  }catch(e){
+    addMsg("assistant","❌ Fehler beim Generieren: "+e.message);
+  }
+}
+</script>
 </body>
 </html>
